--- a/player.html
+++ b/player.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="navbar">
-        <img class="icon" src="https://cdn-icons-png.flaticon.com/512/2809/2809590.png" alt="NahWatch">
+        <img class="icon" src="https://cdn-icons-png.flaticon.com/512/2809/2809590.png" onclick="window.location.href = './index.html'" alt="NahWatch">
         <button class="navbutton" onclick="window.location.href='./series.html'">Series</button>
         <button class="navbutton" onclick="window.location.href='./movie.html'">Movies</button>
         <div class="title-container">
@@ -67,9 +67,6 @@
                     <img class ="button-icon" src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png" alt="">Contact Us
                 </button>
             </div>
-        <footer class="bottom-bar">
-            <p>© 2023 NAHWATCH. All rights reserved to original creators.<br>"This nonprofit streaming website was meticulously crafted by Ben David Ivgi to provide you with an exceptional entertainment experience. Explore our extensive collection of movies and series, and embark on a cinematic journey like never before."(ChatGPT, 2023)</p>
-        </footer>
         <div id="requestModal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="document.getElementById('requestModal').style.display='none';" id="closeModal">&times;</span>
@@ -87,6 +84,9 @@
             </div>
         </div>
         </div>
+        <footer class="bottom-bar">
+            <p>© 2023 NAHWATCH. All rights reserved to original creators.<br>"This nonprofit streaming website was meticulously crafted by Ben David Ivgi to provide you with an exceptional entertainment experience. Explore our extensive collection of movies and series, and embark on a cinematic journey like never before."(ChatGPT, 2023)</p>
+        </footer>
         <script>
             document.addEventListener('DOMContentLoaded', () => {
                 const requestForm = document.getElementById('requestForm');
