fix main page bug

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <button class="navbutton" onclick="window.location.href='./movie.html'">Movies</button>
         <div class="title-container">
             <h1 class="navtitle">NahWatch</h1>
-            <h1 class="media-type">series</h1>
+            <h1 class="media-type">enjoy!</h1>
         </div>
-        <div class="search-conatiner">
-            <button id="search-button" class="search-button" onclick="searchMedia('tv')">Search</button>
-            <input class="search-bar" id="search" type="text" placeholder="Search...">
-        </div> 
     </header>
     <div class="items">
         <div class="item-list">
