alpha mobile view added

--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
         </div>
         <div class="search-conatiner">
             <button id="search-button" class="search-button" onclick="searchMedia('movie')">Search</button>
-            <input class="search-bar" id="search" type="text" placeholder="Search...">
+            <input class="search-bar" id="search" type="text" placeholder="Search Movies...">
         </div> 
     </header>
     <div class="items">
