--- a/series.html
+++ b/series.html
@@ -18,7 +18,7 @@
         </div>
         <div class="search-conatiner">
             <button id="search-button" class="search-button" onclick="searchMedia('tv')">Search</button>
-            <input class="search-bar" id="search" type="text" placeholder="Search...">
+            <input class="search-bar" id="search" type="text" placeholder="Search Series...">
         </div> 
     </header>
     <div class="items">
